# xfce-wayland-protocols

./: README.md  meson.build  xfce-foreign-toplevel-management-private-v1.xml  xfce-input-device-list-private-v1.xml  xfce-output-management-private-v1.xml  xfce-output-private-v1.xml
